Bug fix, add missing collapse class

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -191,9 +191,6 @@ nav {
     padding:20px;
     box-shadow: 0 2px 4px -2px rgba(0,0,0,0.25);
   }
-
-.nav li:hover {
-
 }
 
 @media (max-width: 350px) {
